# learning_qt6

./: .clang-format  .gitignore  CMakeLists.txt  README.md
chapter1/samp1_1/: CMakeLists.txt  widget.cpp  widget.ui
chapter2/: CMakeLists.txt
chapter2/samp2_1/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
chapter2/samp2_2/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
chapter2/samp2_2/Resources/: res.qrc
chapter2/samp2_3/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
chapter2/samp2_4_runtime_type_info/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
chapter2/samp3_1/: CMakeLists.txt  main.cpp  tperson.cpp  widget.cpp  widget.h
chapter3/samp3_1_meta_funcional_experiment/: widget.ui
chapter3/samp3_1_meta_functional_experiment/: CMakeLists.txt  main.cpp  tperson.cpp  tperson.h  widget.cpp  widget.h  widget.ui
chapter4/: CMakeLists.txt
chapter4/samp4_1_layout_visualization/: CMakeLists.txt  main.cpp
chapter4/samp4_1_layout_visualization/include/: test.hpp
chapter4/samp4_1_layout_visualization/src/: main.cpp
chapter4/samp4_1_layout_visualization/test/: qstring_and_qchar.cpp
chapter4/samp4_1_layout_visualization/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
chapter4/samp4_2_qchar_function/: CMakeLists.txt
chapter4/samp4_2_qchar_function/ui/: widget.cpp  widget.ui
chapter4/samp4_3_qchar_test/: CMakeLists.txt
chapter4/samp4_3_qchar_test/src/: main.cpp
chapter4/samp4_3_qchar_test/ui/: widget.cpp  widget.h  widget.ui
chapter4/samp4_4_qstring_function/: CMakeLists.txt
chapter4/samp4_4_qstring_function/src/: main.cpp
chapter4/samp4_4_qstring_function/ui/: ui_widget.h  widget.cpp  widget.h  widget.ui
chapter4/samp4_5_conversion_qstring_number/: CMakeLists.txt
chapter4/samp4_5_conversion_qstring_number/include/: test.hpp
chapter4/samp4_5_conversion_qstring_number/src/: main.cpp  test.cpp
chapter4/samp4_5_conversion_qstring_number/ui/: widget.cpp  widget.h  widget.ui
docs/: chapter4.md
samp2_1/: widget.cpp
samp2_2/: dialog.h  dialog.ui  main.cpp
samp2_3/: CMakeLists.txt  dialog.cpp
