cmake_minimum_required(VERSION 3.26)
project(learning)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(chapter1/samp1_1)
add_subdirectory(chapter2/samp2_1)
add_subdirectory(chapter2/samp2_2)
add_subdirectory(chapter2/samp2_3)
add_subdirectory(chapter2/samp2_4_runtime_type_info)
add_subdirectory(chapter3/samp3_1_meta_functional_experiment)